# MyGit

./: .gitignore
c_cplus/: 1check_char.out  check_char.c  check_char.out  sptf.c  test.c  test1.c  test_scanf.c  test_sprintf_uint64.c  test_sprintf_uint64.out  数组转换16进制字符串.cpp  时间戳转换.c
c_cplus/boostLog/: CMakeLists.txt  log.cpp  log2.cpp  log_to_file.cpp
cmake-test/: CMakeLists.txt  README.md  build.sh
cmake-test/lib/: readme.md
cmake-test/src/: CMakeLists.txt  main.c
cmake-test/test/: CMakeLists.txt
cmake-test/test/c_j1939/: CMakeLists.txt  bf.c  test_can.c
cmake-test/test/can_server/: CMakeLists.txt  can_message.h  can_service.cpp  can_service.h
cmake-test/test/canj1939/: CMakeLists.txt  socketcan_asio.cpp  socketcan_asio.h
cmake-test/test/r_canj1939/: CMakeLists.txt  SocketCanJ1939.cpp  SocketCanJ1939.h  bf.cpp  bf1.txt
cmake-test/test/t_nomho_json/: CMakeLists.txt  parsJsonTest.cpp  test1.cpp
cmake-test/test/t_nomho_json/nlohmann/: CMakeLists.txt  README  download.sh
cmake-test/test/test1/: CMakeLists.txt  test1.cpp
cmake-test/test/test_s-to-str/: CMakeLists.txt  CP56time2a.cpp  t.cpp  t1.cpp  ts-str.cpp
js/transparent transmission/: index.js  test.js
python/auto_test/ugen_work/: test_ugen_tm.py
python/blue_test/: ble_name_connect.py  bleak_ble_example.py  bleak_connect_and_rw_message.py  bleak_scan.py  print_ble_characteristic.py
python/package_库文件包/: XlsxWriter-1.2.9.tar
python/pyQT5/: 4_button.py  Ui_untitled.py  Ui_untitled2.py  main.py  main1.py  more_t.py  pyQT线程间通信_信号.py  qtThread.py  readme.txt  tt1.py  untitled2.ui  加载文件.py  输入框打印.py
python/pyQT5/chatble/: main.py  mainWindow.ui
python/pyQT6/: ble_t1.py  connect_ble.py  gpt_ble_example2.py  gpt_example.py  test.py
python/pyble/: gpt_example.py  gpt_example2.py  main.py  pybluz.py
python/test/: async.py  duoxianc.py  main.py  make_exe.bat  openCloseWin10Ble.py  open_close_ble.py  open_close_ble.spec  print打印到文件.py  print输出到文件.py  siglewait.py  t5.py  test_1.py  test多线程调用.py  上传文件到apache.py  保护excl工作簿.py  全局变量验证.py  创建excl.py  创建多个sheet.py  创建并加密excl.py  创建文件.py  创建线程.py  加上0x.py  加载文件.py  同步时间.py  多线程退出.py  字符串提取分析json.py  字符串转字节.py  定时器.py  异步等待.py  打印传参.py  拷贝表格.py  日志管理.py  替换字符串.py  百分比打印.py  移位操作.py  自动点击.py  读取二进制文件.py  读取文件夹下文件名.py
python/进程通信/: socket_test_srv.py  soket_test_client2.py  test.py
shell/: check_file_has-and -if-use.sh  check_file_has.sh  clean_git.sh  get_path_pwd.sh  get_user_input.sh
socket_test_cpp/: server_socket.cpp
some_file/can-j1939-support-canfd/: readme.md
sqlite3/: 2russell_select.c  3russell_updata.c  4_russell_delete.c  card.db  find-head_end_id.c  find.c  old_nfc.c  russell_get_table.c  russell_insert.c  test-sql-creat.c  test.c  time_test.c
win_bat/: compare2hex.py  compare_2file.bat  creat_zip.bat  func_bat.bat  function_example.bat  getTime.bat  sc1.bat  script2.bat  test_find_file.bat  test_func.bat
yml/pipeline/juno/: azure-pipelines-test.yml
